Add login functionality and treatment dashboard

--- a/Project Nebula/backend/.env.example
+++ b/Project Nebula/backend/.env.example
@@ -1,7 +1,12 @@
 # Example environment variables - DO NOT ADD REAL CREDENTIALS HERE
 MONGO_URI=mongodb://localhost:27017/nebula
 PORT=5000
+JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_complex
 
-# Add any other environment variables your app needs, but use dummy/example values
-# JWT_SECRET=your_jwt_secret_here
-# API_KEY=your_api_key_here
+# Email Configuration (Gmail)
+# To get an app password for Gmail:
+# 1. Enable 2-factor authentication on your Google account
+# 2. Go to Google Account Settings > Security > App passwords
+# 3. Generate an app password for this application
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-gmail-app-password
